--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+main {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 #logo_bool {
     width: 10%;
     margin-top: 45px;
@@ -11,3 +21,19 @@
     background-size: contain;
     background-image: url("../img/pattern.png");
 }
+
+
+#title {
+    font-size: xx-large;
+    width: 60%;
+}
+
+#sub_title {
+    color: rgb(104, 104, 104);
+    width: 9%;
+}
+
+#link {
+    text-decoration: none;
+}
+
