--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
 main {
     margin-left: 5px;
     margin-right: 5px;
@@ -25,7 +20,9 @@ main {
 
 #title {
     font-size: xx-large;
-    width: 60%;
+    width: 45%;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 #sub_title {
@@ -37,3 +34,16 @@ main {
     text-decoration: none;
 }
 
+#tim {
+    margin-top: 20px;
+    margin-left: 0;
+}
+
+.content {
+    width: 55%;
+    margin-top: 20px;
+}
+
+#list {
+    margin-left: 15px;
+}
