--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ main {
 #tim {
     margin-top: 20px;
     margin-left: 0;
+    background-size: cover;
 }
 
 .content {
@@ -47,3 +48,17 @@ main {
 #list {
     margin-left: 15px;
 }
+
+table {
+    background-color: rgb(0, 119, 255);
+    width: 80%;
+}
+
+thead {
+    color: white;
+}
+
+.row_color {
+    background-color: rgb(0, 255, 234)9, 202, 202);
+}
+
