--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ main {
 }
 
 .content {
-    width: 55%;
     margin-top: 20px;
 }
 
@@ -49,9 +48,8 @@ main {
     margin-left: 15px;
 }
 
-table {
+thead {
     background-color: rgb(0, 119, 255);
-    width: 80%;
 }
 
 thead {
@@ -59,6 +57,10 @@ thead {
 }
 
 .row_color {
-    background-color: rgb(0, 255, 234)9, 202, 202);
+    background-color: cyan;
+}
+
+td {
+    width: 25%;
 }
 
