--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ main {
     margin-bottom: 0;
 }
 
-#sub_title {
+.sub_title {
     color: rgb(104, 104, 104);
     width: 9%;
 }
@@ -49,7 +49,7 @@ main {
 }
 
 thead {
-    background-color: rgb(0, 119, 255);
+    background-color: rgb(0, 38, 255);
 }
 
 thead {
@@ -57,10 +57,41 @@ thead {
 }
 
 .row_color {
-    background-color: cyan;
+    background-color: rgb(0, 183, 255);
 }
 
 td {
-    width: 25%;
+    width: 33%;
+    display: inline-block;
 }
 
+footer {
+    margin-top: 25px;
+}
+
+#img-1 {
+    height: 185px;
+    background-image: url("../img/monitor.jpg");
+    width: 300px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+}
+
+#img-2 {
+    height: 185px;
+    background-image: url("../img/graph.jpg");
+    width: 300px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: 10px;
+}
+
+.text_img {
+    color: white;
+    font-size: x-large;
+    margin-left: 10px;
+    margin-top: 10px;
+    width: auto;
+    display: inline-block;
+}
